spacing idention issue fixed

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -27,8 +27,6 @@ $tooltip-border-clr: #f0f0f0;
 $tooltip-shadow-clr: #f1f1f1;
 $brd-clr-snd:#e3e3e3;
 $brd-clr-trd:#cad6e2;
-
-
 $fnt12: 12px;
 $fnt14: 14px;
 $fnt16: 16px;
@@ -46,25 +44,21 @@ $fnt65: 65px;
 $heading1: 50px;
 $heading2: 42px;
 $heading3: 32px;
-
-
-
 .fnt20 {
     font-size: $fnt20;
     font-family: 'Poppins-400';
 }
 
-@media (min-width: 1024px){
+@media (min-width: 1024px) {
     $heading3: 32px;
 }
 
-.secondary_label{
+.secondary_label {
     color: $disable-chk-clr;
     font-family: 'Poppins-300';
 }
 
 //-------------- FONTS --------------
-
 //Light - 300
 @font-face {
     font-family: 'Poppins-300';
@@ -82,7 +76,6 @@ $heading3: 32px;
     font-family: 'Poppins-500';
     src: url('./Fonts/Poppins/Poppins-Medium.ttf');
 }
-
 
 //SemiBold - 600
 @font-face {
@@ -108,7 +101,6 @@ $heading3: 32px;
     src: url('./Fonts/Poppins/Poppins-Black.ttf');
 }
 
-
 //font-icons
 @font-face {
     font-family: 'Material';
@@ -116,8 +108,8 @@ $heading3: 32px;
 }
 
 //-------------- MIXINS & GENERIC --------------
-
-@mixin buttonWrapper($backgroundClr, $textClr) {
+@mixin buttonWrapper($backgroundClr,
+$textClr) {
     min-width: 200px;
     height: 50px;
     line-height: 50px;
@@ -137,7 +129,8 @@ $heading3: 32px;
         box-shadow: none;
     }
 }
-@mixin tooltipMessageBox(){
+
+@mixin tooltipMessageBox() {
     min-width: 320px;
     padding: 15px;
     background: $white-clr;
@@ -145,26 +138,28 @@ $heading3: 32px;
     border: 2px solid $tooltip-border-clr;
     font-style: normal;
     box-shadow: 0 0 10px 0px $tooltip-shadow-clr;
-    &:before{
-    	content:"";
-    	width: 15px;
-    	height: 15px;
-    	border: 2px solid $tooltip-border-clr;
-    	background: $white-clr;
-    	border-bottom-color: transparent;
-    	border-right-color: transparent;
-    	display: block;
-    	position: absolute;
-    	top: -8px;
-    	right: 20px;
-    	transform: rotate(45deg);
-
+    &:before {
+        content: "";
+        width: 15px;
+        height: 15px;
+        border: 2px solid $tooltip-border-clr;
+        background: $white-clr;
+        border-bottom-color: transparent;
+        border-right-color: transparent;
+        display: block;
+        position: absolute;
+        top: -8px;
+        right: 20px;
+        transform: rotate(45deg);
     }
 }
-.slds-radio .slds-radio__label{
+
+.slds-radio .slds-radio__label {
     cursor: pointer;
 }
-.cstm_input, .slds-radio {
+
+.cstm_input,
+.slds-radio {
     display: block;
     width: 100%;
     height: 100%;
@@ -173,19 +168,16 @@ $heading3: 32px;
     background: transparent;
     z-index: 0;
     cursor: pointer;
-    padding-left:35px;
-    color:$blk-clr;
+    padding-left: 35px;
+    color: $blk-clr;
     padding-top: 4px;
     font-family: 'Poppins-300';
     line-height: 18px;
     font-weight: bold;
-
-
     input[type="radio"]+label:before,
-    input[type="radio"]+label:after{
+    input[type="radio"]+label:after {
         content: "";
     }
-
     input[type="radio"]+em,
     input[type="radio"]+label:before,
     input[type="checkbox"]+em,
@@ -202,15 +194,12 @@ $heading3: 32px;
         position: absolute;
         left: 0px;
         top: 0;
-
     }
-
     input[type="radio"]+em:before,
     input[type="radio"]+label:after {
         content: "";
         transition: background-color .2s ease-in-out
     }
-
     input[type="radio"]:checked+em:before,
     input[type="radio"]:checked+label:after {
         content: "";
@@ -223,14 +212,11 @@ $heading3: 32px;
         left: 50%;
         transform: translate(50%, 50%);
     }
-
-
     input[type="radio"]:disabled+em,
     input[type="radio"]:disabled+label:before {
         border-color: $disable-clr;
         background: $disable-clr;
     }
-
     input[type="radio"]:disabled+em:before,
     input[type="radio"]:disabled+label:after {
         content: "";
@@ -243,18 +229,16 @@ $heading3: 32px;
         left: 50%;
         transform: translate(50%, 50%);
     }
-
     input[type="radio"].blocked+em:before,
     input[type="radio"].blocked+label:after {
         content: "";
         background: transparent;
     }
-
     input[type="radio"]+label:before,
-    input[type="radio"]:checked+label:before{
+    input[type="radio"]:checked+label:before {
         top: 2px;
     }
-    input[type="radio"]:checked+label:after{
+    input[type="radio"]:checked+label:after {
         position: absolute;
         left: 2px !important;
         top: 4px !important;
@@ -262,34 +246,29 @@ $heading3: 32px;
         height: 10px !important;
         border-radius: 20px;
     }
-
     input[type="checkbox"],
     input[type="radio"] {
         opacity: 0;
         position: absolute;
     }
-
     input[type="checkbox"]+em,
     input[type="checkbox"]+label {
         display: block;
         border-radius: 5px;
         transition: background-color .2s ease-in-out;
     }
-
     input[type="checkbox"]:checked+em,
     input[type="checkbox"]:checked+label {
         background: $verify-clr url('../images/icons/white_check.svg') no-repeat center center;
         border-color: $verify-clr;
         background-size: 60%;
     }
-
     input[type="checkbox"]:disabled+em,
     input[type="checkbox"]:disabled+label {
         background: $disable-clr url('../images/icons/disabled_check.svg') no-repeat center center;
         border-color: $disable-clr;
         background-size: 60%;
     }
-
     input[type="checkbox"].blocked+em,
     input[type="checkbox"].blocked+label {
         background: $disable-clr;
@@ -298,14 +277,14 @@ $heading3: 32px;
     }
     .slds-form-element,
     .slds-form-element__control,
-    .slds-checkbox{
+    .slds-checkbox {
         height: 100%;
     }
     .slds-checkbox_faux,
-    .slds-radio_faux{
+    .slds-radio_faux {
         display: none;
     }
-    lightning-input{
+    lightning-input {
         width: 24px;
         height: 24px;
         position: absolute;
@@ -313,16 +292,18 @@ $heading3: 32px;
         top: 0;
     }
 }
+
 .slds-input,
 .slds-input:focus,
 .slds-input:required,
-.slds-input:required:focus{
+.slds-input:required:focus {
     border-radius: 0;
     box-shadow: none;
     line-height: inherit;
 }
+
 .tooltip_info {
-    .material-icons{
+    .material-icons {
         font-size: $fnt25;
     }
     width: 30px !important;
@@ -331,51 +312,50 @@ $heading3: 32px;
     position: absolute;
     bottom: 0;
     transform: translateY(-50%);
-
     display: block !important;
     z-index: 99;
     outline: none;
-	cursor: pointer;
+    cursor: pointer;
     .tooltip_msg {
-        .material-icons{
+        .material-icons {
             font-size: $fnt14;
         }
-    	@include tooltipMessageBox();
+        @include tooltipMessageBox();
         position: absolute;
-	    right: -15px;
-	    top: 60px;
-	    opacity: 0;
+        right: -15px;
+        top: 60px;
+        opacity: 0;
         visibility: hidden;
-        transition: visibility 0.3s, opacity 0.3s, top 0.3s;
-	    cursor: default;
-	    .close{
-	    	cursor: pointer;
-	    }
-
+        transition: visibility 0.3s,
+        opacity 0.3s,
+        top 0.3s;
+        cursor: default;
+        .close {
+            cursor: pointer;
+        }
     }
-    &:focus{
+    &:focus {
         pointer-events: none;
         z-index: 100;
-        .tooltip_msg{
+        .tooltip_msg {
             top: 52px;
             opacity: 1;
             visibility: visible;
-            pointer-events: auto;    
+            pointer-events: auto;
         }
     }
 }
 
-.tooltip_info_snd 
-{
-    top:7px;
+.tooltip_info_snd {
+    top: 7px;
     right: 0px;
 }
-.slds-spinner_container{
+
+.slds-spinner_container {
     position: fixed !important;
 }
 
-
-  .tooltip_info_heading2 {
-        right: 6px!important;
-        bottom: 34px!important;
-    }
+.tooltip_info_heading2 {
+    right: 6px!important;
+    bottom: 34px!important;
+}
